--- a/008_Log4QtDemo/QtLog4Qt.conf
+++ b/008_Log4QtDemo/QtLog4Qt.conf
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug,File
+log4j.rootLogger=ALL,File           
 log4j.appender.File=org.apache.log4j.FileAppender
 log4j.appender.File=org.apache.log4j.RollingFileAppender
 log4j.appender.File.File=Log.log
@@ -6,3 +6,4 @@ log4j.appender.File.MaxFileSize=3072KB
 log4j.appender.File.AppendFile=true
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%p] %m%n
+log4j.appender.File.ImmediateFlush=true
