更新配置文件

--- a/008_Log4QtDemo/QtLog4Qt.conf
+++ b/008_Log4QtDemo/QtLog4Qt.conf
@@ -1,9 +1,9 @@
-log4j.rootLogger=ALL,File           
-log4j.appender.File=org.apache.log4j.FileAppender
-log4j.appender.File=org.apache.log4j.RollingFileAppender
-log4j.appender.File.File=Log.log
-log4j.appender.File.MaxFileSize=3072KB
-log4j.appender.File.AppendFile=true
+log4j.rootLogger=ALL,File 		这个表示日志记录的等级，我这里是是ALL所有，后面就是名字吧，暂时这么理解	
+log4j.appender.File=org.apache.log4j.FileAppender 			这个表示将日志记录到文件
+log4j.appender.File=org.apache.log4j.RollingFileAppender	这个表示滚动时存储
+log4j.appender.File.File=Log.log 			日志名称
+log4j.appender.File.MaxFileSize=3072KB 		日志大小	
+log4j.appender.File.AppendFile=true 		追加模式
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
-log4j.appender.File.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%p] %m%n
-log4j.appender.File.ImmediateFlush=true
+log4j.appender.File.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n 		日志输出格式
+log4j.appender.File.ImmediateFlush=true			立即输出
