更新配置文件及说明文档

--- a/008_Log4QtDemo/QtLog4Qt.conf
+++ b/008_Log4QtDemo/QtLog4Qt.conf
@@ -1,6 +1,6 @@
 log4j.rootLogger=ALL,File 		这个表示日志记录的等级，我这里是是ALL所有，后面就是名字吧，暂时这么理解	
 log4j.appender.File=org.apache.log4j.FileAppender 			这个表示将日志记录到文件
-log4j.appender.File=org.apache.log4j.RollingFileAppender	这个表示滚动时存储
+log4j.appender.File=org.apache.log4j.RollingFileAppender	存储到回卷文件中，即当文件到达某个大小后回卷
 log4j.appender.File.File=Log.log 			日志名称
 log4j.appender.File.MaxFileSize=3072KB 		日志大小	
 log4j.appender.File.AppendFile=true 		追加模式
